--- a/css/index.css
+++ b/css/index.css
@@ -140,7 +140,7 @@ div#title::after{
   width: 100%;
   height: 40%;
   background-image: url(../img/eng2.png);
-  min-height: 700px;
-  border-top: 3px solid #ccc;
+  border-top: 3px solid #b0b0b0;
+  opacity: 50%;
 }
 
