--- a/css/index.css
+++ b/css/index.css
@@ -142,5 +142,6 @@ div#title::after{
   background-image: url(../img/eng2.png);
   border-top: 3px solid #b0b0b0;
   opacity: 50%;
+  min-height: 400px;
 }
 
