--- a/css/contact.css
+++ b/css/contact.css
@@ -2,7 +2,9 @@ section#contact{
   background-color: #eee;
   box-sizing: border-box;
   min-height: 700px;
-  padding-top: 200px;
+  margin-top: 100px;
+  padding-top: 100px;
+  position: relative;
 }
 section#contact .wrap{    
   text-align: center;
@@ -61,4 +63,28 @@ section#contact .wrap ul li:nth-child(2)::before{
   background-repeat: no-repeat;
   background-position: center;
    margin-bottom: 20px;
+}
+section#contact .top{
+  font-size: 0;
+  display: block;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  position: absolute;
+  right: 100px;
+  bottom: 100px;
+
+  background-color: black;
+}
+section#contact .top:before{
+  content: "";
+  background-image: url(../img/top2.svg);
+  display: block;
+  width: 50px;
+  height: 50px;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+section#contact .top:hover{  
+  background-color: #8997a9;
 }
