--- a/css/aside.css
+++ b/css/aside.css
@@ -11,24 +11,29 @@ aside ul li{
   height: 16px;
   position: relative;
   cursor: pointer;
+  border: 1px solid transparent;
+  transition: 0.5s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
 }
 aside ul li:not(:last-child) {  
-  margin-bottom: 30px;
+  margin-bottom: 10px;
 }
 aside ul li a {  
   font-size: 0;
   display: block;
-  width: 4px;
-  height: 4px;
-  background-color: black;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  margin: -2px;
+  width: 6px;
+  height: 6px;
+  background-color: #474545;
   border-radius: 50%;
+}
+aside ul li a::before{
+  content: "about";
 }
 
 .side{
-  border: 1px solid;
+  border: 1px solid #F48181;
   border-radius: 50%;
 }
