--- a/css/index.css
+++ b/css/index.css
@@ -34,11 +34,11 @@ header h1{
 }
 header h1 a{
 
-  font-size: 15px;
+  font-size: 26px;
   text-transform: capitalize;
   letter-spacing: 2px;
   font-weight: bold;
-  color: black;
+  color: #F48181;
 }
 header ul{
   display: flex;
@@ -57,6 +57,7 @@ header ul li a{
 }
 header ul li:hover a{  
   font-weight: bold;
+  color: #F48181;
 }
 header .wrap>a{  
   font-size: 0;
@@ -146,6 +147,7 @@ div#title::after{
   background-image: url(../img/eng2.png);
   border-top: 3px solid #b0b0b0;
   opacity: 50%;
-  min-height: 300px;
 }
-
+section h2{
+ color: #F48181;
+}
