--- a/css/contact.css
+++ b/css/contact.css
@@ -2,9 +2,10 @@ section#contact{
   background-color: #eee;
   box-sizing: border-box;
   min-height: 700px;
-  margin-top: 100px;
-  padding-top: 100px;
   position: relative;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 section#contact .wrap{    
   text-align: center;
