--- a/css/responsive.css
+++ b/css/responsive.css
@@ -33,8 +33,6 @@
   }
   div#title div.wrap{    
     width: calc(100vw - 30px);
-    /*! height: 100%; */
-    padding: 0 15px;
   }
   div#title div.wrap h2{
     font-size: 40px;
@@ -50,8 +48,10 @@
     
   display: flex;
   flex-direction: column;
-  padding: 0 15px;
   height: 100%;
+  width: 100%;
+  padding: 0 15px;
+  box-sizing: border-box;
   }
   section#about .wrap h2{
   font-size: 60px;
