--- a/css/responsive.css
+++ b/css/responsive.css
@@ -21,6 +21,7 @@
     padding: 0 15px;
     box-sizing: border-box;
     width: 100vw;
+    background-color: red;
   }
   header ul{    
     display: none;
