--- a/css/index.css
+++ b/css/index.css
@@ -40,7 +40,7 @@ header h1 a{
   text-transform: capitalize;
   letter-spacing: 2px;
   font-weight: bold;
-  color: #F48181;
+  color: #EB5C57;
 }
 header ul{
   display: flex;
@@ -59,7 +59,7 @@ header ul li a{
 }
 header ul li:hover a{  
   font-weight: bold;
-  color: #F48181;
+  color: #EB5C57;
 }
 header .wrap>a{  
   font-size: 0;
@@ -144,11 +144,11 @@ div#title::after{
   content: "";
   display: block;
   width: 100%;
-  height: 40%;
+  height: 38%;
   background-image: url(../img/eng2.png);
   border-top: 3px solid #b0b0b0;
   opacity: 50%;
 }
 section h2{
- color: #F48181;
+ color: #EB5C57;
 }
