--- a/css/index.css
+++ b/css/index.css
@@ -3,11 +3,11 @@ header{   /* 너비지정 */
   margin: 0 auto; /* 중앙정렬 */
   height: 60px;
   position: fixed;
-  width: 100vw;
+  width: 100%;
   top: 0;
   background-color: #eee;
   z-index: 1;
-  padding: 0 15px;
+  padding: 0 50px;
   box-sizing: border-box;
 }
 .headerUP{
@@ -28,8 +28,7 @@ header .wrap{
   justify-content: space-between;
   align-items: center;
   height: 100%;
-  color: black;
-  width: 1800px;
+  width: 100%;
 }
 header h1{
 
@@ -44,10 +43,9 @@ header h1 a{
 }
 header ul{
   display: flex;
-  gap: 65px;
   font-family: 'Inter', sans-serif;
   font-size: 15px;
-  transform: translateX(-20%);
+  /*! transform: translateX(-700px); */
 }
 header ul li{
 
@@ -55,7 +53,8 @@ header ul li{
 header ul li a{
   text-transform: uppercase;
   color: black;
-  padding: 5px;
+  padding: 20px;
+  font-weight: 500;
 }
 header ul li:hover a{  
   font-weight: bold;
@@ -69,6 +68,7 @@ header .wrap>a{
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  display: none;
 }
 /* 타이틀 영역 */
 div#title{
