--- a/css/about.css
+++ b/css/about.css
@@ -20,16 +20,18 @@ section#about .wrap h2{
 section#about .wrap p {  
 grid-column: 2;
   grid-row: 2;
-  margin: 30px 70px;
+  margin: 30px 55px;
   color: black;
   line-height: 1.6;
   text-align: center;
   background-color: #EEE;
   padding: 15px;
   border-radius: 10px;
+letter-spacing: 1.1px;
 }
-section#about .wrap p span{
-  
+section#about .wrap p span{  
+  line-height: 1.6;
+  font-weight: bold;
 }
 section#about .wrap img {
   width: 400px;
@@ -41,7 +43,7 @@ section#about .wrap img {
 section#about .wrap ul{
   grid-column: 2;
   grid-row: 3;
-  margin: 0 70px;
+  margin: 0 55px;
   padding: 15px;
   background-color: #eee;
   border-radius: 10px;
