--- a/css/index.css
+++ b/css/index.css
@@ -82,7 +82,7 @@ div#title div.wrap{ /* 하위선택자 */
   justify-content: center;
   align-items: center;
   color: black;
-  height: 60%;
+  height: 70%;
 }
 div#title div.wrap h2 {
   font-family: 'Playfair Display', serif;
@@ -144,8 +144,8 @@ div#title::after{
   content: "";
   display: block;
   width: 100%;
-  height: 38%;
-  background-image: url(../img/eng2.png);
+  height: 29%;
+  background-image: url(../img/eng/eng.png);
   border-top: 3px solid #b0b0b0;
   opacity: 50%;
 }
