--- a/css/skill.css
+++ b/css/skill.css
@@ -11,7 +11,7 @@ section#skill .wrap h2{
   }
 section#skill .wrap h2::after{
   content: "";
-  background-image: url(../img/eng4.png);
+  background-image: url(../img/eng/eng2.png);
   display: block;
   width: 272px;
   height: 600PX;
