--- a/css/index.css
+++ b/css/index.css
@@ -46,19 +46,20 @@ header ul{
   font-family: 'Inter', sans-serif;
   font-size: 15px;
   /*! transform: translateX(-700px); */
+  gap: 20px;
 }
 header ul li{
 
 }
 header ul li a{
   text-transform: uppercase;
-  color: black;
-  padding: 20px;
-  font-weight: 500;
+  padding: 10px;
+  color: #EB5C57;
+  font-weight: 600;
 }
 header ul li:hover a{  
-  font-weight: bold;
-  color: #EB5C57;
+  border-radius: 20px;
+  background: white;
 }
 header .wrap>a{  
   font-size: 0;
