--- a/css/index.css
+++ b/css/index.css
@@ -54,12 +54,11 @@ header ul li{
 header ul li a{
   text-transform: uppercase;
   padding: 10px;
-  color: #EB5C57;
+  color: black;
   font-weight: 600;
 }
 header ul li:hover a{  
-  border-radius: 20px;
-  background: white;
+  color: #EB5C57;
 }
 header .wrap>a{  
   font-size: 0;
