--- a/css/skill.css
+++ b/css/skill.css
@@ -4,6 +4,7 @@ section#skill{
   }
 section#skill .wrap{
     display: flex;
+    height: 100%;
   }
 section#skill .wrap h2{
   font-size: 100px;
@@ -12,14 +13,15 @@ section#skill .wrap h2{
 section#skill .wrap h2::after{
   content: "";
   background-image: url(../img/eng/eng2.png);
+  background-repeat: no-repeat;
   display: block;
-  width: 272px;
-  height: 600PX;
+  width: 100%;
+  height: 100%;
   transform: translateX(-15px);
   position: absolute;
   right: -12px;
   opacity: 40%;
-  background-size: contain;
+
 }
 section#skill .wrap .left{
   width: 60%;
@@ -34,26 +36,31 @@ section#skill .wrap .left::before{
   position: absolute;
   left: -44px;
 }
-section#skill .wrap .left .bar{
-
+section#skill .wrap .left ul{  
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  padding-top: 50px;
 }
-section#skill .wrap .left .bar .skill{  
-  line-height: 3;
+section#skill .wrap .left ul li{
+  width: 100%;
+  background-color: white;
+  padding: 20px;
+  box-sizing: border-box;
+  border-radius: 10px;
 }
-section#skill .wrap .left .bar .outer{  
-  height: 1.25em;
-  background: #EEEEEE;
-  position: relative;
-  border-radius: 0.3em;
-  background-color: #b1b1b1;
+section#skill .wrap .left ul li h3{  
+  margin-bottom: 25px;
+  font-weight: bold;
+  color: #EB5C57;
 }
-section#skill .wrap .left .bar .outer .inner{
-  height: 1.25em;
-  border-radius: 0.3em;
-  background-color: black;
+section#skill .wrap .left ul li img{
+  width: 30px;
 }
-
-
+section#skill .wrap .left ul li p{  
+  margin-bottom: 20px;
+  line-height: 2;
+}
 
 
 
