--- a/css/about.css
+++ b/css/about.css
@@ -6,31 +6,30 @@ section#about{
 section#about .wrap{
   display: grid;
   grid-template-columns:  auto 1fr;
-  grid-template-rows: auto auto auto;
+  grid-template-rows: auto 1fr;
   width: 1000px;
 }
 section#about .wrap h2{
   font-size: 100px;
   grid-column: 2;
+  grid-row: 1;  
   padding-bottom: 30px;
   border-bottom: 1px solid #c1c1c1;
-  grid-row: 1;
+
   text-align: center;
 }
 section#about .wrap p {  
 grid-column: 2;
-  grid-row: 2;
-  margin: 30px 55px;
-  color: black;
-  line-height: 1.6;
-  text-align: center;
+  grid-row: 2 / span 2;
+  line-height: 2.5;
   background-color: #EEE;
-  padding: 15px;
+  padding: 30px;
   border-radius: 10px;
 letter-spacing: 1.1px;
+margin: 30px auto;
 }
 section#about .wrap p span{  
-  line-height: 1.6;
+  line-height: 2.5;
   font-weight: bold;
 }
 section#about .wrap img {
