--- a/css/aside.css
+++ b/css/aside.css
@@ -28,6 +28,7 @@ aside ul li a {
   height: 6px;
   background-color: #474545;
   border-radius: 50%;
+  transition: 0.5s;
 }
 aside ul li a::before{
   content: "about";
@@ -36,4 +37,9 @@ aside ul li a::before{
 .side{
   border: 1px solid #F48181;
   border-radius: 50%;
+}
+.side a{
+  background-color: red;
+  transform: scale(1.3);
+  transform-origin: 50% 50%;
 }
