--- a/css/index.css
+++ b/css/index.css
@@ -55,10 +55,10 @@ header ul li a{
   text-transform: uppercase;
   padding: 10px;
   color: black;
+  font-weight: 500;
 }
 header ul li:hover a{  
   color: #EB5C57;
-  font-weight: bold;
 }
 header .wrap>a{  
   font-size: 0;
