--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -11,10 +11,32 @@ section#portfolio .wrap{
   height: 100%;
 }
 section#portfolio .wrap h2{
-  padding-bottom: 50px;
   font-size: 100px;
-  border-bottom: 1px solid #c1c1c1;
   width: 100%;
+  display: flex;
+  align-items:center;
+  padding: 30px 0;
+}
+section#portfolio .wrap h2::before{
+  content: "";
+  display: inline-block;
+  width: 40%;
+  border: 1px solid #c1c1c1;
+  margin-right: 20px;
+  opacity: 0.6;
+}
+section#portfolio .wrap h2::after{
+  content: "";
+  display: inline-block;
+  width: 40%;
+  border: 1px solid #c1c1c1;
+   margin-left: 20px;
+  opacity: 0.6;
+}
+section#portfolio .wrap p.p{
+
+  color: #84504D;
+  font-weight: 500;
 }
 section#portfolio .wrap .portAni{   
   padding: 100px 0;
@@ -26,7 +48,6 @@ section#portfolio .wrap .portAni .port {
   margin: 0 auto;
 }
 section#portfolio .wrap .portAni .port h3 {   
-
   grid-column: 2;
   grid-row: 1;
   font-size: 40px;
@@ -50,7 +71,7 @@ section#portfolio .wrap .portAni .port ul li span {
   font-weight: bold;
   margin-right: 17px;
   line-height: 2.5;
-  color: #666;
+  color: #888;
 }
 section#portfolio .wrap .portAni .port ul li span.under{
   margin-left: 67px;
@@ -60,8 +81,8 @@ section#portfolio .wrap .portAni .port ul li span.under{
 section#portfolio .wrap .portAni .port a.button {   
   grid-column: 2;
   grid-row: 3;
-  background-color: black;
-  width: 150px;
+  background-color: #222;
+  width: 115px;
   height: 30px;
   border-radius: 35px;
   justify-self: center;
@@ -72,7 +93,7 @@ section#portfolio .wrap .portAni .port a.button {
   margin-top: 10px;
 }
 section#portfolio .wrap .portAni .port a.button:hover{  
-  background-color: #EB5C57;
+  background-color: #50A1DC;
 }
 section#portfolio .wrap .portAni .port img {   
   grid-column: 1;
@@ -87,4 +108,27 @@ section#portfolio .slick-dots li.slick-active button:before{
 section#portfolio .slick-dotted.slick-slider{
   margin-bottom: 0;
 }
-
+section#portfolio .slick-next{
+  width: 50px;
+  height: 50px;
+  right: -80px;
+}
+section#portfolio .slick-prev{
+  width: 50px;
+  height: 50px;
+  left: -80px;
+}
+section#portfolio .slick-prev::before{  
+  color: #EB5C57;
+  width: 100%;
+  font-size: 50px;
+  opacity: 1;
+  line-height: 1.2;
+}
+section#portfolio .slick-next::before{
+  color: #EB5C57;
+  width: 100%;
+  font-size: 50px;
+  opacity: 1;
+  line-height: 1.2;
+}
