--- a/css/contact.css
+++ b/css/contact.css
@@ -29,8 +29,7 @@ section#contact .wrap ul{
 section#contact .wrap ul li{
   
   padding-bottom: 20px;
-  /*! width: 100%; */
-  /*! height: 300px; */
+  color: #292929;
 }
 section#contact .wrap ul li::before{
   content: "";
