--- a/css/responsive.css
+++ b/css/responsive.css
@@ -33,7 +33,7 @@
   
 /*  타이틀  */
   div#title{
-    padding: 0 15px;
+  padding: 0 15px;
 }
   div#title::after{    
     background-position-x: right;
@@ -48,38 +48,38 @@
   
 /*  어바웃  */
   section#about{    
-    padding: 80px 0 0 0;
-    background-color: white;
+  padding: 50px 15px;
+  min-height: initial;
    }
-  section#about .wrap{    
+  section#about .wrap{
+    width: calc(100vw - 30px);
     display: flex;
     flex-direction: column;
-    height: 100%;
-    width: 100%;
-    padding: 0 15px;
-    box-sizing: border-box;
   }
   section#about .wrap h2{
     font-size: 60px;
+    padding-bottom: 30px;
+    border-bottom: 1px solid #c1c1c1;
   }
-  section#about .wrap p{
-    
-  width: calc(100vw - 100px);
-  font-size: 13px;
-  height: 75vw;
+  section#about .wrap p{    
   padding: 20px;
   margin: 30px auto;
+  width: calc(100vw -30px);
+  font-size: calc(100% * 0.7);
+  height: 42vw;
+  line-height: 2;
   }
+  section#about .wrap p span{
+    
+  line-height: 2;
+}
   section#about .wrap img{   
-    padding: 30px 0;
-    width: calc(100vw - 150px);
-    margin: 0 auto;
-    display: none;
+  display: none;
   }
   section#about .wrap ul{
-    font-size: 12px;
-    text-align: left;
-    width: calc(100vw - 60px);
+  width: calc(100vw - 30px);
+  height: 42vw;
+  font-size: calc(100% * 0.7);
   }
   section#about .wrap ul li{    
     line-height: 2.5;
@@ -91,54 +91,69 @@
   
 /*  스킬  */
   section#skill{    
+  padding: 50px 15px;
+  min-height: initial;
   }
   section#skill .wrap{    
     width: calc(100vw - 30px);
-    padding: 0 15px;
-    margin: 0;
-    box-sizing: initial;
     display: flex;
     flex-direction: column;
-    height: 100%;
+
   }
   section#skill .wrap h2{    
     font-size: 60px;
     text-align: center;
     padding-bottom: 30px;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #c1c1c1;
   }
   section#skill .wrap h2::after{    
     display: none;
   }
   section#skill .wrap .left{    
-    margin: 0;
-    width: calc(100vw - 150px);
-    margin: 0 auto;
+  width: calc(100vw - 30px);
+  height: 100vh;
   }
   section#skill .wrap .left::before{    
     display: none;
   }
-  section#skill .wrap .left .bar .skill{    
-    line-height: 3;
-    font-size: 13px;
+  section#skill .wrap .left ul{
+    
+  padding: 0;
   }
-  section#skill .wrap .left .bar:nth-child(1) .skill{    
-    padding-top: 10px;
+  section#skill .wrap .left ul li{    
+  width: calc(100vw - 30px);
+  height: 42vw;
+  font-size: calc(100% * 0.7);
   }
-  
+  section#skill .wrap .left ul li h3{    
+  margin-bottom: 10px;
+  font-size: calc(25px * 0.7);
+  }
+  section#skill .wrap .left ul li img{
+    
+  display: none;
+  }
 /*  포트폴리오  */
   section#portfolio{    
-    padding: 80px 0 0 0;
+    padding: 50px 15px;
   }
   section#portfolio .wrap{    
-    width: 100vw;
-    padding: 0 15px;
-    margin: 0;
-    height: 100%;
+    width: calc(100vw - 30px);
+    height: 100vh;
   }
   section#portfolio .wrap h2{    
     font-size: 55px;
-    padding-bottom: 30px;
+    padding: 0 0 30px;
+    display: block;
+    border-bottom: 1px solid #c1c1c1;
+  }
+  section#portfolio .wrap h2::before{
+    
+  display: none;
+  }
+  section#portfolio .wrap h2::after{
+    
+  display: none;
   }
   section#portfolio .wrap .portAni{    
     padding: 30px 0 0 0;
@@ -165,9 +180,7 @@
   section#portfolio .wrap .portAni .port a.button{    
     grid-column: 1;
     grid-row: 4;
-    width: calc(100vw - 150px);
     margin-top: 20px;
-    height: 13vw;
   }
   section#portfolio .wrap .portAni .port img{    
     grid-row: 1;
@@ -188,20 +201,26 @@
   }
   section#contact .wrap{    
     width: calc(100vw - 30px);
+    height: 150vw;
   }
   section#contact .wrap h2{    
    font-size: 60px;
   }
   section#contact .wrap p{    
-    font-size: 15px;
+    font-size: calc(100% * 0.7);
     line-height: 1.6;
-    padding-top: 20px;
+    padding: 20px;
   }
   section#contact .wrap ul{    
-    gap: 50px;
+  gap: 30px;
+  height: 30%;
+  }
+  section#contact .wrap ul li{
+    
+  padding: 0;
   }
   section#contact .wrap ul li::before{    
-    height: 50px !important;
+    height: 14vw !important;
   }
   section#contact .top{    
     right: auto;
