--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -108,24 +108,19 @@ section#portfolio .slick-dots li.slick-active button:before{
 section#portfolio .slick-dotted.slick-slider{
   margin-bottom: 0;
 }
-section#portfolio .slick-next{
-  width: 50px;
-  height: 50px;
-  right: -80px;
-}
+section#portfolio .slick-next,
 section#portfolio .slick-prev{
   width: 50px;
   height: 50px;
+}
+section#portfolio .slick-next{
+  right: -80px;
+}
+section#portfolio .slick-prev{
   left: -80px;
 }
-section#portfolio .slick-prev::before{  
-  color: #EB5C57;
-  width: 100%;
-  font-size: 50px;
-  opacity: 1;
-  line-height: 1.2;
-}
-section#portfolio .slick-next::before{
+section#portfolio .slick-prev::before,
+section#portfolio .slick-next::before{  
   color: #EB5C57;
   width: 100%;
   font-size: 50px;
