--- a/css/index.css
+++ b/css/index.css
@@ -31,7 +31,8 @@ header .wrap{
   width: 100%;
 }
 header h1{
-
+  position: relative;
+  z-index: 2;
 }
 header h1 a{
 
@@ -151,4 +152,26 @@ div#title::after{
 }
 section h2{
  color: #EB5C57;
+}
+.ham{
+  font-size: 0;
+  width: 21px;
+  height: 21px;
+  display: block;
+  /*! border-top: 3px solid; */
+  /*! border-bottom: 3px solid; */
+  box-sizing: border-box;
+  display: flex;
+  align-items: center; 
+  display: none;
+}
+.ham::before{
+  content: "";
+  width: 100%;
+  height: 3px;
+  display: block;
+  /*! background-color: black; */
+  transform: translateY(-0.5px);
+  position: relative;
+  z-index: 3;
 }
