--- a/css/index.css
+++ b/css/index.css
@@ -71,6 +71,26 @@ header .wrap>a{
   background-size: cover;
   display: none;
 }
+.ham{
+  font-size: 0;
+  width: 21px;
+  height: 21px;
+  display: block;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center; 
+  display: none;
+}
+.ham::before{
+  content: "";
+  width: 100%;
+  height: 3px;
+  display: block;
+  transform: translateY(-0.5px);
+  position: relative;
+  z-index: 3;
+}
+
 /* 타이틀 영역 */
 div#title{
   background-color: #eee;
@@ -78,7 +98,7 @@ div#title{
   min-height: 700px;
 }
 div#title div.wrap{ /* 하위선택자 */
-  width: 1440px;
+  max-width: 1440px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -152,26 +172,4 @@ div#title::after{
 }
 section h2{
  color: #EB5C57;
-}
-.ham{
-  font-size: 0;
-  width: 21px;
-  height: 21px;
-  display: block;
-  /*! border-top: 3px solid; */
-  /*! border-bottom: 3px solid; */
-  box-sizing: border-box;
-  display: flex;
-  align-items: center; 
-  display: none;
-}
-.ham::before{
-  content: "";
-  width: 100%;
-  height: 3px;
-  display: block;
-  /*! background-color: black; */
-  transform: translateY(-0.5px);
-  position: relative;
-  z-index: 3;
 }
