--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,9 +1,71 @@
-@media screen and (max-width:1024px){
+@media screen and (max-width:1440px){
   body{
     overflow-x: hidden;
   }
   
+/* aside   */
+   aside {
+    right: 25px;
+  }
+/*  title  */
+  div#title div.wrap h2{    
+    font-size: 144px;
+  }
   
+/*  about  */
+  section{
+    min-height: 100% !important;
+  }
+  section#about{
+    padding: 0 15px;
+  }
+  section#about .wrap img
+  
+/* skill   */
+  section#skill{    
+    padding: 50px 0px 0 40px;
+  }
+  section#skill .wrap h2::after{    
+    height: 80%;
+}
+  section#skill .wrap .left{    
+    margin: 30px auto 0;
+  }
+  section#skill .wrap .left::before{    
+    left: -73px;
+  }
+  section#skill .wrap .left ul li{    
+  padding: 15px;
+  }
+  
+/*  portfolio  */
+  .slick-dots{
+    bottom: -44px;
+  }
+  section .wrap h2{
+   font-size: 80px !important; 
+  }
+  
+/*  portfolio  */
+  section#portfolio .wrap .portAni{    
+    padding: 50px 0;
+  }
+  section#portfolio .wrap .portAni .port img{
+     width: calc(100vw / 3); 
+  }
+  section#portfolio .wrap .slick-prev,
+  section#portfolio .wrap .slick-next{    
+    display: none !important;
+  }
+  
+/*  contact  */
+  section#contact .top{    
+    right: calc((100vw / 2) - 50px);
+    bottom: 10px;
+  }
+}
+
+@media screen and (max-width:1024px){  
 /*  어사이드  */
   aside{
     display: none;
@@ -24,6 +86,12 @@
   header .wrap{    
     width: calc(100vw - 30px);
   }
+  header h1 a{    
+    font-size: 15px;
+  }
+  header ul li a{
+    font-size: 30px;
+  }
   header ul{    
     display: flex;
     flex-direction: column;
@@ -41,17 +109,9 @@
   .gnbShow{
      right: 0 !important;
   }
-  header ul li a{
-    font-size: 30px;
-  }
-  header h1 a{    
-    font-size: 15px;
-  }
 /*  ham  */
   .ham{
     display: flex !important;
-    grid-column: 1;
-    grid-row: 1;
     position: relative;
   }
   .ham.close{
@@ -60,22 +120,21 @@
 /*  타이틀  */
   div#title{
   padding: 0 15px;
+  min-height: auto;
 }
   div#title::after{    
     background-position-x: right;
-    height: 28%;
   }
   div#title div.wrap{    
     width: calc(100vw - 30px);
   }
   div#title div.wrap h2{
-    font-size: 40px;
+    font-size: 80px;
   }
   
 /*  어바웃  */
   section#about{    
-  padding: 50px 15px;
-  min-height: initial;
+    padding: 30px 15px;
    }
   section#about .wrap{
     width: calc(100vw - 30px);
@@ -83,26 +142,25 @@
     flex-direction: column;
   }
   section#about .wrap h2{
-    font-size: 64px;
+    font-size: 60px !important;
     padding-bottom: 30px;
     border-bottom: 1px solid #c1c1c1;
   }
   section#about .wrap p{    
-  padding: 20px;
-  margin: 30px 0;
-  font-size: calc(100% * 0.7);
-  line-height: 2;
+    padding: 20px;
+    margin: 0;
+    font-size: calc(100% * 0.8);
+    line-height: 2;
   }
-  section#about .wrap p span{
-    
-  line-height: 2;
+  section#about .wrap p span{    
+    line-height: 2;
 }
   section#about .wrap img{   
-  display: none;
+    display: none;
   }
   section#about .wrap ul{
-  width: calc(100vw - 30px);
-  font-size: calc(100% * 0.7);
+    width: calc(100vw - 30px);
+    font-size: calc(100% * 0.8);
   }
   section#about .wrap ul li{    
     line-height: 2.5;
@@ -114,18 +172,16 @@
   
 /*  스킬  */
   section#skill{    
-  padding: 50px 15px;
-  min-height: 900px;
+    padding: 30px 15px;
   }
   section#skill .wrap{    
     width: calc(100vw - 30px);
     display: flex;
     flex-direction: column;
-
     height: 100%;
   }
   section#skill .wrap h2{    
-    font-size: 60px;
+    font-size: 60px !important;
     text-align: center;
     padding-bottom: 30px;
     border-bottom: 1px solid #c1c1c1;
@@ -134,81 +190,65 @@
     display: none;
   }
   section#skill .wrap .left{    
-  width: calc(100vw - 30px);
-  margin: 50px 0 0;
+    width: calc(100vw - 30px);
+    margin: 30px 0 0;
   }
   section#skill .wrap .left::before{    
     display: none;
   }
-  section#skill .wrap .left ul{
-    
-  padding: 0;
+  section#skill .wrap .left ul{    
+    padding: 0;
+    gap: 20px;
   }
   section#skill .wrap .left ul li{    
-  width: calc(100vw - 30px);
-  font-size: calc(100% * 0.7);
+    width: calc(100vw - 30px);
+    font-size: calc(100% * 0.8);
   }
   section#skill .wrap .left ul li h3{    
-  margin-bottom: 10px;
-  font-size: calc(25px * 0.7);
+    margin-bottom: 5px;
+    font-size: 20px;
   }
-  section#skill .wrap .left ul li p{
-    
+  section#skill .wrap .left ul li p{    
+    line-height: 1.6;
+  }
+  section#skill .wrap .left ul li span{    
+    line-height: 1.6;
   }
   section#skill .wrap .left ul li img{
     
+  width: 20px;
   }
   
 /*  포트폴리오  */
   section#portfolio{    
-    padding: 50px 15px;
+    padding: 30px 15px;
   }
   section#portfolio .wrap{    
     width: calc(100vw - 30px);
-    height: 100vh;
+    height: 100%;
   }
   section#portfolio .wrap h2{    
-    font-size: 55px;
+    font-size: 60px !important;
     padding: 0 0 30px;
     display: block;
     border-bottom: 1px solid #c1c1c1;
   }
-  section#portfolio .wrap h2::before{
-    
-  display: none;
+  section#portfolio .wrap h2::before{    
+    display: none;
   }
-  section#portfolio .wrap h2::after{
-    
-  display: none;
+  section#portfolio .wrap h2::after{    
+    display: none;
   }
   section#portfolio .wrap .portAni{    
-    padding: 30px 0 0 0;
+    padding: 50px 0 0;
   }
-  section#portfolio .wrap .portAni .port{    
-  display: flex;
-  flex-direction: column;
+  section#portfolio .wrap .portAni .port img{
+    
+  width: calc(100vw / 2.5);
   }
-  section#portfolio .wrap .portAni .port h3{    
-    font-size: 30px;
-    width: calc(100vw - 30px);
-    padding: 30px 0;
-    margin: 0;
-    order: 2;
-  }
-  section#portfolio .wrap .portAni .port ul{    
-  order: 3;
-  }
-  section#portfolio .wrap .portAni .port ul li{    
-   font-size: 15px;
-  }
-  section#portfolio .wrap .portAni .port a.button{    
-    margin: 20px auto;
-    order: 4;
-  }
-  section#portfolio .wrap .portAni .port img{    
-    width: calc(100vw - 150px);
-    margin: 0 auto;
-    order: 1;
+  section#portfolio .wrap .portAni .port a.button{
+    
+  margin-top: 24px;
   }
   section#portfolio .wrap .slick-dots{    
     bottom: -50px;
@@ -226,27 +266,25 @@
     width: calc(100vw - 30px);
   }
   section#contact .wrap h2{    
-   font-size: 60px;
+   font-size: 60px !important;
   }
   section#contact .wrap p{    
-    font-size: calc(100% * 0.7);
+    font-size: calc(100% * 0.8);
     line-height: 1.6;
     padding: 20px;
   }
   section#contact .wrap ul{    
-  gap: 30px;
-  height: 30%;
+    gap: 50px;
+    height: 30%;
   }
-  section#contact .wrap ul li{
-    
-  padding: 0;
+  section#contact .wrap ul li{    
+    padding: 0;
   }
   section#contact .wrap ul li::before{    
-    height: 14vw !important;
+    height: 5vw !important;
   }
   section#contact .top{    
     right: auto;
-    bottom: 50px;
     width: 30px;
     height: 30px;
   }
@@ -254,11 +292,11 @@
     width: 30px;
     height: 30px;
   }
-section#portfolio .slick-next{
-  display: none !important;
+  section#portfolio .slick-next{
+    display: none !important;
 }
-section#portfolio .slick-prev{
-  display: none !important;
+  section#portfolio .slick-prev{
+    display: none !important;
 }
   
 /*  하단  */
@@ -269,5 +307,107 @@ section#portfolio .slick-prev{
     font-size: 10px;
   }
 
+}
+
+@media screen and (max-width:480px){
+/*  title  */
+  div#title div.wrap h2{    
+    font-size: 35px;
+  }
+/* about */
+  section#about{
+    
+  }
+  section#about .wrap ul{
+    font-size: calc(100% * 0.7);
+  }
+  section#about .wrap p{    
+    font-size: calc(100% * 0.7);
+  }
+  
+  
+/*  skill  */
+  section#skill{
+    
+  padding: 50px 15px 0;
+  }
+  section#skill .wrap h2{
+    
+  padding-bottom: 20px;
+  }
+  section#skill .wrap .left{
+    margin: 20px 0 0;
+  }
+  section#skill .wrap .left ul{    
+    gap: 10px;
+  }
+  section#skill .wrap .left ul li{
+    font-size: calc(100% * 0.7);
+    padding: 10px;
+  }
+  section#skill .wrap .left ul li p{    
+    line-height: 1.6;
+  }
+  section#skill .wrap .left ul li span{
+    
+  line-height: 1.6;
+  }
+  section#skill .wrap .left ul li h3{
+    font-size: 18px;
+  }
+  section#skill .wrap .left ul li img{
+    
+  width: 20px;
+  }
+  
+/*  portfolio  */
+  section#portfolio{
+    
+  padding: 50px 15px 30px;
+  }
+  section#portfolio .wrap h2{    
+    font-size: 45px !important;
+    padding-bottom: 20px;
+    display: block;
+    border-bottom: 1px solid #c1c1c1;
+  }
+  section#portfolio .wrap .portAni{    
+    padding: 50px 0 0;
+  }
+  section#portfolio .wrap .portAni .port{    
+    display: flex;
+    flex-direction: column;
+  }
+  section#portfolio .wrap .portAni .port h3{
+    order: 2; 
+    font-size: 25px;
+    margin: 10px auto 10px;
+    padding: 0;
+  }
+  section#portfolio .wrap .portAni .port ul{
+    order: 3;  
+  }
+  section#portfolio .wrap .portAni .port ul li{    
+    font-size: 13px;
+  }
+  section#portfolio .wrap .portAni .port a.button{
+    order: 4;  
+    margin: 20px auto;
+  }
+  section#portfolio .wrap .portAni .port img{    
+    order: 1;
+    width: calc(100vw / 2);
+  }
+  section#portfolio .wrap .slick-dots{    
+    bottom: -18px;
+  }
+  
+/*  contact  */
+  section#contact .wrap p{    
+    font-size: calc(100% * 0.7);
+  }
+  section#contact .wrap ul li::before{    
+    height: 10vw !important;
+  }
 
 }
